[Fix] visualization on safari delet overflow-clip property

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@
   }
 
   .shadow__link:hover {
-    text-shadow: 0 0 .65px #333, 0 0 .65px #333;
+    text-decoration: underline;
   }
 
   .navbar__dropdown {
